--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,209 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: column;
+  font-family: "Josefin Sans", sans-serif;
+  padding: 0 20%;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 25px 0 15px;
+  flex-direction: column;
+}
+
+.header-container h1 {
+  font-weight: 500;
+  font-size: 40px;
+  margin: 0 !important;
+}
+.header-container h3 {
+  font-weight: 200;
+  font-size: 32px;
+  margin: 0 !important;
+}
+.word-container {
+  width: 100%;
+}
+
+input {
+  width: -webkit-fill-available;
+  padding: 20px 10px;
+  border-radius: 8px;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 300;
+  border: solid 0.5px;
+}
+.select-container {
+  display: flex;
+}
+select {
+  width: 50%;
+  padding: 10px;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 300;
+  border-radius: 5px 0 0 5px;
+  border: solid 1px #050a30;
+}
+/* BUTTONS  */
+.btn-search {
+  background-color: #2e2eff;
   color: white;
+  font-size: 18px;
+  border-radius: 5px;
+  border: solid 1px #050a30;
+  cursor: pointer;
+  padding: 5px 10px;
+}
+.btn-search:disabled {
+  cursor: not-allowed;
+  background-color: #7ec8e3;
+  color: white;
+  border: none;
+}
+.main-button {
+  width: 300px;
+  padding: 1rem;
+  background-color: #2e2eff;
+  color: white;
+  font-size: 18px;
+  border-radius: 10px;
+  border: solid 1px #050a30;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 200;
+  cursor: pointer;
+}
+.main-button:disabled {
+  cursor: not-allowed;
+  background-color: #7ec8e3;
+  color: white;
+  border: none;
+}
+/* SPACER  */
+.spacer {
+  min-height: 20px;
+}
+hr {
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0.75),
+    rgba(0, 0, 0, 0)
+  );
+}
+hr.hspacer {
+  margin: 1rem 0;
 }
 
-.App-link {
-  color: #61dafb;
+/* LOADER  */
+.lds-dual-ring {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #fff;
+  border-color: #fff transparent #fff transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.card {
+  width: 100%;
+  border: solid 1px black;
+  border-radius: 10px;
+  margin: 10px;
+}
+
+.top {
+  padding: 10px 10px;
+  background: rgb(0, 170, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 170, 255, 1) 0%,
+    rgba(49, 0, 255, 1) 100%
+  );
+  color: white;
+  border-radius: 9px 9px 0 0;
+  text-align: end;
+}
+.top p {
+  margin: 0;
+}
+
+.container-card {
+  margin: 10px;
+  box-shadow: 0 0 2px 1px #d0d0d0;
+  border-radius: 10px;
+  padding: 6px;
+  text-align: end;
+}
+.def-title,
+.ex-title {
+  background-color: #3100ff;
+  color: white;
+  padding: 2px 5px;
+  border-radius: 5px;
+  margin-right: 15px;
+}
+.def,
+.ex {
+  text-align: start;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 200;
+  font-size: 23px;
+  padding-left: 10px;
+}
+
+.syn-cnt {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.synonyms {
+  padding: 1rem;
+  border: solid 1px black;
+  border-radius: 10px;
+}
+h3 {
+  font-weight: 200;
+  font-size: 32px;
+  margin: 0 !important;
+}
+
+.min-title{
+  display: flex;
+  justify-content: center;
+  margin: 2rem;
+}
+
+@media only screen and (max-width: 660px) {
+  .container {
+    padding: 15px !important;
   }
-  to {
-    transform: rotate(360deg);
+  .main-button {
+    height: 50px !important;
+    padding: 0 !important;
+  }
+  select {
+    height: 50px !important;
+  }
+  .syn-cnt {
+    flex-direction: column;
+  }
+  .synonyms {
+    margin-bottom: 1rem;
   }
 }
