--- a/src/App.css
+++ b/src/App.css
@@ -105,6 +105,7 @@ hr.hspacer {
   display: inline-block;
   width: 80px;
   height: 80px;
+  margin: 50px;
 }
 .lds-dual-ring:after {
   content: " ";
@@ -113,16 +114,26 @@ hr.hspacer {
   height: 64px;
   margin: 8px;
   border-radius: 50%;
-  border: 6px solid #fff;
-  border-color: #fff transparent #fff transparent;
+  border: 6px solid #cef;
+  border-color: #2e2eff transparent #2e2eff transparent;
   animation: lds-dual-ring 1.2s linear infinite;
 }
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
 
 .card {
   width: 100%;
   border: solid 1px black;
   border-radius: 10px;
-  margin: 10px;
+  margin-bottom: 10px;
 }
 
 .top {
@@ -187,6 +198,10 @@ h3 {
   display: flex;
   justify-content: center;
   margin: 2rem;
+}
+.no-syn {
+  text-align: center;
+  margin-top: 100px;
 }
 
 @media only screen and (max-width: 660px) {
