--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+body{
+  height: 100%;
+  background-color: #D9AFD9;
+  background-image: linear-gradient(00deg, #D9AFD9 0%, #97D9E1 100%);
+  }
 .container {
   display: flex;
   align-items: center;
